Fix z-index issue with pins, add delay into draggable events

--- a/nk360/3-resource-annotator/css/main.css
+++ b/nk360/3-resource-annotator/css/main.css
@@ -673,7 +673,7 @@ small,
   display: none; }
 
 .mobile-markers {
-  position: absolute;
+  position: fixed;
   bottom: 50px;
   background: rgba(46, 55, 66, 0.85);
   padding: 20px 50px 0;
@@ -749,10 +749,13 @@ small,
       width: 100%; } }
   @media screen and (max-width: 480px) {
     .mobile-menu {
-      margin-top: 60px; } }
+      margin-top: 75px; } }
   @media screen and (max-width: 767px) and (orientation: portrait) {
     .browser-android .mobile-menu {
       margin-top: 0; } }
+  @media screen and (max-width: 480px) {
+    .browser-android .mobile-menu {
+      margin-top: 60px; } }
   .mobile-menu .half-menu {
     width: 49.5%;
     display: inline-block;
@@ -912,7 +915,7 @@ small,
   width: 320px;
   /* Must match Js */
   height: 200px;
-  z-index: 2;
+  z-index: 5;
   bottom: 40px;
   left: 0;
   font-size: 15px;
@@ -940,27 +943,25 @@ small,
         box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 10px;
         padding: 15px;
         height: 180px;
-        z-index: 10000;
+        z-index: 999999;
         top: 150px;
         right: 30px; } }
     @media screen and (max-width: 767px) and (orientation: landscape) {
       .marker-in-text .mobile-text-container {
         top: 75px; } }
     @media screen and (max-width: 480px) {
-      .marker-in-text .mobile-text-container {
-        top: 50px;
-        z-index: 999999999; } }
+      .browser-android .marker-in-text .mobile-text-container {
+        top: 50px; } }
 
-.marker-in-text.visible {
-  z-index: 3; }
+.marker-in-text.pin-visible {
+  z-index: 6; }
 
 .marker-in-text img {
   width: 50px;
   height: auto;
   position: absolute;
   opacity: .5;
-  cursor: pointer;
-  z-index: 4; }
+  cursor: pointer; }
   @media screen and (max-width: 767px) {
     .marker-in-text img {
       width: 30px;
